part2/2.01/manifests/log-output/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      nodeSelector:
        project: pingpong-log
      containers:
        - name: writer
          image: pedrocoelhodr/log-output:writer-1.5
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
        - name: reader
          image: pedrocoelhodr/log-output:reader-1.4
          ports:
            - containerPort: 3002
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
