part2/2.01/manifests/log-output/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - name: reader
      port: 2345
      targetPort: 3002
    - name: writer
      port: 2346
      targetPort: 3001
