part2/2.01/manifests/log-output/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /log
            pathType: Prefix
            backend:
              service:
                name: log-output-svc
                port:
                  name: reader
